layout-neumorphic-music-player-nour022

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
       <li>
         <a href="./layout-grid-parent-nour022/">layout-grid-parent</a>
       </li>
+
+      <li>
+        <a href="./layout-neumorphic-music-player-nour022/"
+          >layout-neumorphic-music-player</a
+        >
+      </li>
     </nav>
   </body>
 </html>
