ui-basics-exam-nour022

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
           >layout-neumorphic-music-player</a
         >
       </li>
+
+      <li>
+        <a href="./layout-warp-club-nour022/">layout-warp-club</a>
+      </li>
+      <li>
+        <a href="./magazine-landing-page-nour022/">magazine-landing-page</a>
+      </li>
+      <li>
+        <a href="./ui-basics-exam-nour022/">ui-basics</a>
+      </li>
     </nav>
   </body>
 </html>
