--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <a href="./magazine-landing-page-nour022/">magazine-landing-page</a>
       </li>
       <li>
-        <a href="./ui-basics-exam-nour022/">ui-basics</a>
+        <a href="./ui-basics-exam-nour022/">ui-basics-HTML-CSS</a>
       </li>
     </nav>
   </body>
