--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <nav>
-      <h1>Grid and Flex Exercises</h1>
+      <h1>HTML and CSS exercises</h1>
       <li>
         <a href="./layout-fixed-vanishing-header-nour022/"
           >layout-fixed-vanishing-header</a
