--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
       <li>
         <a href="./ui-basics/">ui-basics-HTML-CSS</a>
       </li>
+      <li>
+        <a href="./responsive-bootstrap-webpage/"
+          >responsive-bootstrap-webpage</a
+        >
+      </li>
     </nav>
   </body>
 </html>
