--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
           >responsive-bootstrap-webpage</a
         >
       </li>
+        <li>
+        <a href="https://nour022.github.io/buget-weather-redux/"
+          >React App buget-weather-redux/</a
+        >
+      </li>
     </nav>
   </body>
 </html>
