--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
         >
       </li>
         <li>
+        <a href="https://nour022.github.io/nour022-information-technology-institute.oi/"
+          >information-technology-institute.oi</a
+        >
+      </li>
+        <li>
         <a href="https://nour022.github.io/buget-weather-redux/"
           >React App buget-weather-redux/</a
         >
