--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML and CSS exercises</title>
+    <title>WEB DEV Projekts</title>
     <style>
       body {
         display: flex;
@@ -36,7 +36,22 @@
   </head>
   <body>
     <nav>
-      <h1>HTML and CSS exercises</h1>
+      <h1>WEB DEV Projekts</h1>
+      <li>
+        <a href="./responsive-bootstrap-webpage-nour022/"
+          >responsive-bootstrap-webpage</a
+        >
+      </li>
+        <li>
+        <a href="https://nour022.github.io/nour022-information-technology-institute.oi/"
+          >information-technology-institute.oi</a
+        >
+      </li>
+        <li>
+        <a href="https://nour022.github.io/buget-weather-redux/"
+          >React App buget-weather-redux/</a
+        >
+      </li>
       <li>
         <a href="./layout-fixed-vanishing-header-nour022/"
           >layout-fixed-vanishing-header</a
@@ -93,21 +108,7 @@
       <li>
         <a href="./ui-basics/">ui-basics-HTML-CSS</a>
       </li>
-      <li>
-        <a href="./responsive-bootstrap-webpage-nour022/"
-          >responsive-bootstrap-webpage</a
-        >
-      </li>
-        <li>
-        <a href="https://nour022.github.io/nour022-information-technology-institute.oi/"
-          >information-technology-institute.oi</a
-        >
-      </li>
-        <li>
-        <a href="https://nour022.github.io/buget-weather-redux/"
-          >React App buget-weather-redux/</a
-        >
-      </li>
+      
     </nav>
   </body>
 </html>
