--- a/index.html
+++ b/index.html
@@ -38,77 +38,77 @@
     <nav>
       <h1>WEB DEV Projekts</h1>
       <li>
-        <a href="./responsive-bootstrap-webpage-nour022/"
+        <a href="./responsive-bootstrap-webpage-nour09-cmd/"
           >responsive-bootstrap-webpage</a
         >
       </li>
       <li>
-        <a href="https://nour022.github.io/Projektweb-uni/"
+        <a href="https://nour09-cmd.github.io/Projektweb-uni/"
           >Projektweb-uni</a
         >
       </li>
         <li>
-        <a href="https://nour022.github.io/nour022-information-technology-institute.oi/"
+        <a href="https://nour09-cmd.github.io/nour09-cmd-information-technology-institute.oi/"
           >information-technology-institute.oi</a
         >
       </li>
         <li>
-        <a href="https://nour022.github.io/buget-weather-redux/"
+        <a href="https://nour09-cmd.github.io/buget-weather-redux/"
           >React App buget-weather-redux/</a
         >
       </li>
       <li>
-        <a href="./layout-fixed-vanishing-header-nour022/"
+        <a href="./layout-fixed-vanishing-header-nour09-cmd/"
           >layout-fixed-vanishing-header</a
         >
       </li>
       <li>
-        <a href="./layout-freelance-position-nour022/"
+        <a href="./layout-freelance-position-nour09-cmd/"
           >layout-freelance-position</a
         >
       </li>
 
       <li>
-        <a href="./layout-grid-and-flexbox-harmony-nour022/"
+        <a href="./layout-grid-and-flexbox-harmony-nour09-cmd/"
           >layout-grid-and-flexbox-harmony</a
         >
       </li>
 
       <li>
-        <a href="./layout-grid-blogger-nour022/">layout-grid-blogger</a>
+        <a href="./layout-grid-blogger-nour09-cmd/">layout-grid-blogger</a>
       </li>
 
       <li>
-        <a href="./layout-grid-design-studio-nour022/"
+        <a href="./layout-grid-design-studio-nour09-cmd/"
           >layout-grid-design-studio</a
         >
       </li>
 
       <li>
-        <a href="./layout-grid-document-layout-nour022/"
+        <a href="./layout-grid-document-layout-nour09-cmd/"
           >layout-grid-document-layout</a
         >
       </li>
 
       <li>
-        <a href="./layout-grid-nour022/">layout-grid</a>
+        <a href="./layout-grid-nour09-cmd/">layout-grid</a>
       </li>
 
       <li>
-        <a href="./layout-grid-parent-nour022/">layout-grid-parent</a>
+        <a href="./layout-grid-parent-nour09-cmd/">layout-grid-parent</a>
       </li>
 
       <li>
-        <a href="./layout-neumorphic-music-player-nour022/"
+        <a href="./layout-neumorphic-music-player-nour09-cmd/"
           >layout-neumorphic-music-player</a
         >
       </li>
 
       <li>
-        <a href="./layout-warp-club-nour022/">layout-warp-club</a>
+        <a href="./layout-warp-club-nour09-cmd/">layout-warp-club</a>
       </li>
       <li>
-        <a href="./magazine-landing-page-nour022/">magazine-landing-page</a>
+        <a href="./magazine-landing-page-nour09-cmd/">magazine-landing-page</a>
       </li>
       <li>
         <a href="./ui-basics/">ui-basics-HTML-CSS</a>
